# content-marketing-engine

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  rate_limiter.py
backend/app/auth/: __init__.py  dependencies.py  hashing.py  jwt_service.py  router.py  schemas.py  user_service.py
backend/app/documents/: __init__.py  extractor_base.py  pdf_extractor.py  url_fetcher.py
backend/app/export/: __init__.py  csv_exporter.py  export_router.py  export_schemas.py
backend/app/llm/: __init__.py  anthropic_provider.py  brand_rules.py  config_service.py  context_collector.py  generation_router.py  generation_schemas.py  openai_provider.py  orchestrator.py  post_processor.py  prompt_builder.py  provider_base.py  provider_factory.py
backend/app/models/: __init__.py  category.py  export_log.py  llm_config.py  product.py  product_claim.py  product_document.py  product_version.py  segment.py  user.py
backend/app/products/: __init__.py  category_router.py  category_schemas.py  category_service.py  claim_router.py  claim_schemas.py  claim_service.py  document_router.py  document_schemas.py  document_service.py  product_router.py  product_schemas.py  product_service.py  segment_router.py  segment_schemas.py  segment_service.py  version_router.py  version_schemas.py  version_service.py
backend/app/settings/: __init__.py  brand_rules_router.py  brand_rules_schemas.py  llm_router.py  llm_schemas.py  llm_service.py  user_management_router.py  user_management_schemas.py
backend/tests/llm/: __init__.py  (+6 more)
(+111 files in other folders)
